--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
 </li>
 <li><p>Z. Pan, Y. Yao, G. Liu, B. Shen, H. V. Zhao, R. R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2311.02373">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a>, <i>NeurIPS&rsquo;24</i></p>
 </li>
-<li><p>J. Jia, J. Liu, Y. Zhang, P. Ram, N. Baracaldo, <b>S. Liu</b>, WAGLE: Strategic Weight Attribution for Effective and Modular Unlearning in Large Language Models, <i>NeurIPS&rsquo;24</i></p>
+<li><p>J. Jia, J. Liu, Y. Zhang, P. Ram, N. Baracaldo, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2410.17509">WAGLE: Strategic Weight Attribution for Effective and Modular Unlearning in Large Language Models</a>, <i>NeurIPS&rsquo;24</i></p>
 </li>
 <li><p>Y. Zhang, X. Chen, J. Jia, Y. Zhang, C. Fan, J. Liu, M. Hong, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2405.15234">Defensive Unlearning with Adversarial Training for Robust Concept Erasure in Diffusion Models</a>, <i>NeurIPS&rsquo;24</i></p>
 </li>
