--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Yao*, J. Liu*, Y. Gong*, X. Liu, Y. Wang, X. Lin, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2303.07474">Can Adversarial Examples Be Parsed to Reveal Victim Model Information?</a>, <i>WACV&rsquo;25</i></p>
+</li>
 <li><p>Y. Zhang, C. Fan, Y. Zhang, Y. Yao, J. Jia, J. Liu, G. Zhang, G. Liu, R. R. Kompella, X. Liu, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: Stylized Image Dataset for Enhanced Machine Unlearning Evaluation in Diffusion Models</a>, <i>NeurIPS&rsquo;24 Datasets and Benchmarks Track</i></p>
 </li>
 <li><p>Z. Pan, Y. Yao, G. Liu, B. Shen, H. V. Zhao, R. R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2311.02373">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a>, <i>NeurIPS&rsquo;24</i></p>
