--- a/index.html
+++ b/index.html
@@ -61,13 +61,17 @@ I intend to seek a new learning frontier when the current learning algorithms be
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
 <h2>Representative Publications</h2>
 <ul>
-<li><p><b>Trustworthy AI</b> : Robustness, fairness, and model explanation</p>
+<li><p><b>Trustworthy AI</b> : Robustness, fairness, and model explanation </p>
 </li>
 </ul>
 <ol>
-<li><p><a href="https://arxiv.org/abs/2308.10110v1">Robust Mixture-of-Expert Training for Convolutional Neural Networks</a> <br />
-Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b> <br />
-ICCV&rsquo;23</p>
+<li><p><a href="https://arxiv.org/pdf/2310.11868">To generate or not? safety-driven unlearned diffusion models are still easy to generate unsafe images&hellip; for now</a> <br />
+Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, and <b>S. Liu</b> <br /> 
+ECCV’24</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2310.12508">Salun: Empowering machine unlearning via gradient-based weight saliency in both image classification and generation</a> <br />
+C. Fan*, J. Liu*, Y. Zhang, E. Wong, D. Wei, <b>S. Liu</b> <br />
+ICLR’24</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2304.04934">Model Sparsity Can Simplify Machine Unlearning</a> <br /> 
 J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
@@ -81,16 +85,16 @@ CVPR&rsquo;23</p>
 Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b> (* Equal contribution) <br /> 
 ICML’22</p>
 </li>
-<li><p><a href="https://openreview.net/pdf?id=W9G_ImpHlQd">How to Robustify Black-Box ML Models? A Zeroth-Order Optimization Perspective</a><br />
-Y. Zhang, Y. Yao, J. Jia, J. Yi, M. Hong, S. Chang, <b>S. Liu</b><br />
-ICLR’22</p>
-</li>
 </ol>
 <ul>
 <li><p><b>Scalable AI</b> : Model compression, distributed learning,  black-box optimization, and automated ML <br /></p>
 </li>
 </ul>
 <ol>
+<li><p><a href="https://arxiv.org/pdf/2310.02025">Deepzero: Scaling up zeroth-order optimization for deep model training</a> <br />
+A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b> <br /> 
+ICLR’24</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2310.08782">Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning</a> <br />
 Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b> <br /> 
 NeurIPS&rsquo;23</p>
@@ -107,13 +111,9 @@ NeurIPS’22</p>
 <b>S. Liu</b>, S. Lu, X. Chen, Y. Feng, K. Xu, A. Al-Dujaili, M. Hong, U.-M. O'Reilly <br />
 ICML’20</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2006.06224.pdf">A Primer on Zeroth-Order Optimization in Signal Processing and Machine Learning</a> <br />
-<b>S. Liu</b>, P.-Y. Chen, B. Kailkhura, G. Zhang, A. O. Hero, P. K. Varshney <br />
-IEEE Signal Processing Magazine, 2020</p>
-</li>
 </ol>
 <h2>News</h2>
-<p>* One paper in <a href="https://arxiv.org/pdf/2303.07474">WACV’25: Can Adversarial Examples Be Parsed to Reveal Victim Model Information?</a></p>
+<p>* One paper in <a href="https://wacv2025.thecvf.com">WACV’25</a>: <a href="https://arxiv.org/pdf/2303.07474">Can Adversarial Examples Be Parsed to Reveal Victim Model Information?</a></p>
 <p>* Six papers in <a href="https://neurips.cc">NeurIPS’24</a>, including one dataset benchmark. Congrats to Yihua Zhang, Yuguang Yao, Jinghan Jia, and Yimeng Zhang for their outstanding leadership!</p>
 <p>* One paper in <a href="https://2024.emnlp.org">EMNLP’24</a>: <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a>.</p>
 <p>* Grateful to receive the Amazon Research Award for AI in Information Security&ndash;Spring 2024.</p>
@@ -183,7 +183,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-04 15:29:39 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-10 14:41:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
