--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Grateful for receiving the NAIRR Pilot Award in the field of Artificial Intelligence and Intelligent Systems.</p>
 <p>* One paper in <a href="https://wacv2025.thecvf.com">WACV’25</a>: <a href="https://arxiv.org/pdf/2303.07474">Can Adversarial Examples Be Parsed to Reveal Victim Model Information?</a></p>
 <p>* Six papers in <a href="https://neurips.cc">NeurIPS’24</a>, including one dataset benchmark. Congrats to Yihua Zhang, Yuguang Yao, Jinghan Jia, and Yimeng Zhang for their outstanding leadership!</p>
 <p>* One paper in <a href="https://2024.emnlp.org">EMNLP’24</a>: <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a>.</p>
@@ -183,7 +184,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-10 14:41:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-17 15:46:51 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
