--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Check out the <a href="https://www.optml-group.com/images/pubpic/neurips2024_flyer.pdf">OPTML Menu of Innovations @ NeurIPS 2024</a>!</p>
 <p>* Thrilled to announce that our position paper, “<a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for LLMs</a>”, has been accepted for publication in <a href="https://www.nature.com/natmachintell/">Nature Machine Intelligence</a>.  Congratulations to the team and our amazing collaborators for achieving this milestone!</p>
 <p>* Grateful for receiving the NAIRR Pilot Award in the field of Artificial Intelligence and Intelligent Systems.</p>
 <p>* One paper in <a href="https://wacv2025.thecvf.com">WACV’25</a>: <a href="https://arxiv.org/pdf/2303.07474">Can Adversarial Examples Be Parsed to Reveal Victim Model Information?</a></p>
@@ -185,7 +186,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-28 16:10:23 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-08 10:19:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
