--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Honored to be one of the 10 recipients of the <a href="https://www.amazon.science/research-awards/program-updates/10-amazon-research-awards-recipients-announced?utm_campaign=10-amazon-research-awards-recipients-announced&amp;utm_medium=organic-asw&amp;utm_source=linkedin&amp;utm_content=2024-12-20-10-amazon-research-awards-recipients-announced&amp;utm_term=2024-dec">Amazon Research Award</a> for Spring and Winter 2024.</p>
 <p>* Check out the <a href="https://www.optml-group.com/images/pubpic/neurips2024_flyer.pdf">OPTML Menu of Innovations @ NeurIPS 2024</a>!</p>
 <p>* Thrilled to announce that our position paper, “<a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for LLMs</a>”, has been accepted for publication in <a href="https://www.nature.com/natmachintell/">Nature Machine Intelligence</a>.  Congratulations to the team and our amazing collaborators for achieving this milestone!</p>
 <p>* Grateful for receiving the NAIRR Pilot Award in the field of Artificial Intelligence and Intelligent Systems.</p>
@@ -186,7 +187,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-08 10:19:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-24 21:03:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
