--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* PI Liu is honored to receive the 2025 Withrow Rising Scholar Award from Michigan State University’s College of Engineering. This prestigious award annually recognizes junior faculty for excellence in instruction, scholarship, and distinguished service to the university and student body.</p>
 <p>* Congratulations to Yihua Zhang for receiving <a href="https://research.ibm.com/university/awards/index.html">the prestigious IBM PhD Fellowship</a> and <a href="https://cpal.cc/rising_stars_guidelines/">the CPAL Rising Star Award</a>.</p>
 <p>* Congratulations to Brian Zhang for being named one of <a href="https://www.societyforscience.org/regeneron-sts/2025-scholars/">the Top 300 Scholars of the 84th Annual Science Talent Search in 2025</a> for his project <a href="https://ieeexplore.ieee.org/document/10447808">“Elevating Visual Prompting in Transfer Learning via Pruned Model Ensembles: No Retrain, No Pain”</a> conducted during his high school externship at OPTML mentored by Yuguang Yao.</p>
 <p>* One paper in <a href="https://iclr.cc">ICLR’25</a>, offering a theoretical understanding of task vectors and their application to LLM unlearning. [<a href="https://openreview.net/forum?id=vRvVVb0NAz">paper</a>]</p>
@@ -190,7 +191,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-28 16:45:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-02-05 14:19:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
