--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* “<a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking machine unlearning for large language models</a>” is now published in Nature Machine Intelligence.</p>
 <p>* Our ICLR’25 paper titled “<a href="https://openreview.net/pdf?id=vRvVVb0NAz">When is Task Vector Provably Effective for Model Editing? A Generalization Analysis of Nonlinear Transformers</a>” is selected for an Oral (1.8% acceptance rate)</p>
 <p>* PI Liu is honored to receive the 2025 Withrow Rising Scholar Award from Michigan State University’s College of Engineering. This prestigious award annually recognizes junior faculty for excellence in instruction, scholarship, and distinguished service to the university and student body.</p>
 <p>* Congratulations to Yihua Zhang for receiving <a href="https://research.ibm.com/university/awards/fellowships-awardees.html">the prestigious IBM PhD Fellowship</a> and <a href="https://cpal.cc/rising_stars_guidelines/">the CPAL Rising Star Award</a>.</p>
@@ -191,7 +192,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-15 09:55:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-02-17 13:57:16 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
