--- a/publications.html
+++ b/publications.html
@@ -30,10 +30,6 @@
 <p>(Irregularly updated! See the <b>full publication</b> list at <a href="https://scholar.google.com/citations?user=C7dO_UgAAAAJ&amp;hl=en">Google scholar</a>)</p>
 <h2>Preprints</h2>
 <p>* represents equal contribution</p>
-<ol>
-<li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, X. Xu, Y. Yao, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu, <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a></p>
-</li>
-</ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
@@ -241,6 +237,8 @@
 </ol>
 <h2>Journal Papers </h2>
 <ol>
+<li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, Y. Yao, C. Y. Liu, X. Xu, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu. <a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking machine unlearning for large language models</a>, Nature Machine Intelligence (2025).</p>
+</li>
 <li><p>Y. Zhang, P. Khanduri, I. Tsaknakis, Y. Yao, M. Hong, <b>S. Liu</b>, <a href="https://ieeexplore.ieee.org/document/10502023">An Introduction to Bilevel Optimization: Foundations and applications in signal processing and machine learning</a>, IEEE Signal Processing Magazine, vol. 41, no. 1, pp. 38-59, Jan. 2024</p>
 </li>
 <li><p>Y. Yao, X. Guo, V. Asnani, Y. Gong, J. Liu, X. Lin, X. Liu, <b>S. Liu</b>, <a href="http://dx.doi.org/10.1561/3300000039">Reverse Engineering of Deceptions on Machine- and Human-Centric Attacks</a>, Foundations and Trends® in Privacy and Security: Vol. 6: No. 2, pp 53-152, 2024</p>
