--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Congratulations to Yihua Zhang for being selected as the CSE department’s nominee for the prestigious Fitch H. Beach Award at Michigan State University! This distinguished award honors the most outstanding graduate researchers within the College of Engineering each year.</p>
 <p>* “<a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking machine unlearning for large language models</a>” is now published in Nature Machine Intelligence.</p>
 <p>* Our ICLR’25 paper titled “<a href="https://openreview.net/pdf?id=vRvVVb0NAz">When is Task Vector Provably Effective for Model Editing? A Generalization Analysis of Nonlinear Transformers</a>” is selected for an Oral (1.8% acceptance rate)</p>
-<p>* PI Liu is honored to receive the 2025 Withrow Rising Scholar Award from Michigan State University’s College of Engineering. This prestigious award annually recognizes junior faculty for excellence in instruction, scholarship, and distinguished service to the university and student body.</p>
+<p>* PI Liu is honored to receive the <b>2025 Withrow Rising Scholar Award</b> at Michigan State University. This prestigious award annually recognizes junior faculty for excellence in instruction, scholarship, and distinguished service to the university and student body.</p>
 <p>* Congratulations to Yihua Zhang for receiving <a href="https://research.ibm.com/university/awards/fellowships-awardees.html">the prestigious IBM PhD Fellowship</a> and <a href="https://cpal.cc/rising_stars_guidelines/">the CPAL Rising Star Award</a>.</p>
 <p>* Congratulations to Brian Zhang for being named one of <a href="https://www.societyforscience.org/regeneron-sts/2025-scholars/">the Top 300 Scholars of the 84th Annual Science Talent Search in 2025</a> for his project <a href="https://ieeexplore.ieee.org/document/10447808">“Elevating Visual Prompting in Transfer Learning via Pruned Model Ensembles: No Retrain, No Pain”</a> conducted during his high school externship at OPTML mentored by Yuguang Yao.</p>
 <p>* Honored to be one of the 10 recipients of the <a href="https://www.amazon.science/research-awards/program-updates/10-amazon-research-awards-recipients-announced?utm_campaign=10-amazon-research-awards-recipients-announced&amp;utm_medium=organic-asw&amp;utm_source=linkedin&amp;utm_content=2024-12-20-10-amazon-research-awards-recipients-announced&amp;utm_term=2024-dec">Amazon Research Award</a> for Spring and Winter 2024.</p>
@@ -192,7 +193,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-17 13:57:16 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-02-19 21:41:24 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
