--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>H. Li, Y. Zhang, S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, <a href="https://openreview.net/forum?id=vRvVVb0NAz">When is Task Vector Provably Effective for Model Editing? A Generalization Analysis of Nonlinear Transformers</a>, <i>ICLR’25</i>, <b>Oral</b> <tt>(1.8% acceptance rate)</tt></p>
+</li>
 <li><p>Y. Yao*, J. Liu*, Y. Gong*, X. Liu, Y. Wang, X. Lin, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2303.07474">Can Adversarial Examples Be Parsed to Reveal Victim Model Information?</a>, <i>WACV&rsquo;25</i></p>
 </li>
 <li><p>Y. Zhang, C. Fan, Y. Zhang, Y. Yao, J. Jia, J. Liu, G. Zhang, G. Liu, R. R. Kompella, X. Liu, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: Stylized Image Dataset for Enhanced Machine Unlearning Evaluation in Diffusion Models</a>, <i>NeurIPS&rsquo;24 Datasets and Benchmarks Track</i></p>
