--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Three papers in CVPR’25. Congrats to Yimeng Zhang and Yihua Zhang for their outstanding leadership!</p>
 <p>* Congratulations to Yihua Zhang for being selected as the CSE department’s nominee for the prestigious <b>Fitch H. Beach Award</b> at Michigan State University! This distinguished award honors the most outstanding graduate researchers within the College of Engineering each year.</p>
 <p>* “<a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking machine unlearning for large language models</a>” is now published in Nature Machine Intelligence.</p>
 <p>* Our ICLR’25 paper titled “<a href="https://openreview.net/pdf?id=vRvVVb0NAz">When is Task Vector Provably Effective for Model Editing? A Generalization Analysis of Nonlinear Transformers</a>” is selected for an Oral (1.8% acceptance rate)</p>
@@ -193,7 +194,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-19 21:44:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-02-26 16:52:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
