--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@ I intend to seek a new learning frontier when the current learning algorithms be
 </li>
 </ul>
 <ol>
+<li><p><a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking Machine Unlearning for Large Language Models</a> <br />
+<b>S. Liu</b>, Y. Yao*, J. Jia*, S. Casper, N. Baracaldo, P. Hase, Y. Yao, C. Y. Liu, X. Xu, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu <br /> 
+Nature Machine Intelligence, 2025, pp.181–194</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2310.11868">To generate or not? safety-driven unlearned diffusion models are still easy to generate unsafe images&hellip; for now</a> <br />
 Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, and <b>S. Liu</b> <br /> 
 ECCV’24</p>
@@ -76,10 +80,6 @@ ICLR’24</p>
 <li><p><a href="https://arxiv.org/abs/2304.04934">Model Sparsity Can Simplify Machine Unlearning</a> <br /> 
 J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
 NeurIPS&rsquo;23</p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2211.11635">Understanding and Improving Visual Prompting: A Label-Mapping Perspective</a> <br />
-A. Chen, Y. Yao, P.-Y. Chen, Y. Zhang, <b>S. Liu</b> <br />
-CVPR&rsquo;23</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting and advancing fast adversarial training through the lens of bi-level optimization</a> <br /> 
 Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b> (* Equal contribution) <br /> 
@@ -194,7 +194,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-11 16:43:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-13 07:04:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
