--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@ I intend to seek a new learning frontier when the current learning algorithms be
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
 <h2>Representative Publications</h2>
 <ul>
-<li><p><b>Trustworthy AI</b> : Robustness, fairness, and model explanation </p>
+<li><p><b>Trustworthy AI</b> : Robustness, Fairness, And Model Explanation </p>
 </li>
 </ul>
 <ol>
-<li><p><a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking Machine Unlearning for Large Language Models</a> <br />
+<li><p><a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking Machine Unlearning For Large Language Models</a> <br />
 <b>S. Liu</b>, Y. Yao*, J. Jia*, S. Casper, N. Baracaldo, P. Hase, Y. Yao, C. Y. Liu, X. Xu, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu <br /> 
 Nature Machine Intelligence, 2025, pp.181–194</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2310.11868">To generate or not? safety-driven unlearned diffusion models are still easy to generate unsafe images&hellip; for now</a> <br />
+<li><p><a href="https://arxiv.org/pdf/2310.11868">To Generate Or Not? Safety-driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images&hellip; For Now</a> <br />
 Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, and <b>S. Liu</b> <br /> 
 ECCV’24</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2310.12508">Salun: Empowering machine unlearning via gradient-based weight saliency in both image classification and generation</a> <br />
+<li><p><a href="https://arxiv.org/pdf/2310.12508">Salun: Empowering Machine Unlearning Via Gradient-based Weight Saliency In Both Image Classification And Generation</a> <br />
 C. Fan*, J. Liu*, Y. Zhang, E. Wong, D. Wei, <b>S. Liu</b> <br />
 ICLR’24</p>
 </li>
@@ -81,33 +81,33 @@ ICLR’24</p>
 J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
 NeurIPS&rsquo;23</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting and advancing fast adversarial training through the lens of bi-level optimization</a> <br /> 
+<li><p><a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting And Advancing Fast Adversarial Training Through The Lens Of Bi-level Optimization</a> <br /> 
 Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b> (* Equal contribution) <br /> 
 ICML’22</p>
 </li>
 </ol>
 <ul>
-<li><p><b>Scalable AI</b> : Model compression, distributed learning,  black-box optimization, and automated ML <br /></p>
+<li><p><b>Scalable AI</b> : Model Compression, Distributed Learning, Black-box Optimization, And Automated ML <br /></p>
 </li>
 </ul>
 <ol>
-<li><p><a href="https://arxiv.org/pdf/2310.02025">Deepzero: Scaling up zeroth-order optimization for deep model training</a> <br />
+<li><p><a href="https://arxiv.org/pdf/2310.02025">Deepzero: Scaling Up Zeroth-order Optimization For Deep Model Training</a> <br />
 A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b> <br /> 
 ICLR’24</p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2310.08782">Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning</a> <br />
+<li><p><a href="https://arxiv.org/abs/2310.08782">Selectivity Drives Productivity: Efficient Dataset Pruning For Enhanced Transfer Learning</a> <br />
 Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b> <br /> 
 NeurIPS&rsquo;23</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a> <br />
+<li><p><a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training To Robustify Deep Neural Networks At Scale</a> <br />
 G. Zhang*, S. Lu*, Y. Zhang, X. Chen, P.-Y. Chen, Q. Fan, L. Martie, L. Horesh, M. Hong, <b>S. Liu</b> <br />
 UAI’22 (Best Paper Runner-Up Award)</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2210.04092.pdf">Advancing Model Pruning via Bi-level Optimization</a> <br />
+<li><p><a href="https://arxiv.org/pdf/2210.04092.pdf">Advancing Model Pruning Via Bi-level Optimization</a> <br />
 Y. Zhang*, Y. Yao*, P. Ram, P. Zhao, T. Chen, M. Hong, Y. Wang, <b>S. Liu</b> <br />
 NeurIPS’22</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization without Gradients: Convergence and Applications to Adversarial ML</a> <br />
+<li><p><a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization Without Gradients: Convergence And Applications To Adversarial ML</a> <br />
 <b>S. Liu</b>, S. Lu, X. Chen, Y. Feng, K. Xu, A. Al-Dujaili, M. Hong, U.-M. O'Reilly <br />
 ICML’20</p>
 </li>
@@ -194,7 +194,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-13 07:04:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-14 16:07:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
