--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Dr. Liu is selected as the recipient of the 2024 Aharon Katzir Young Investigator Award from the <a href="https://www.inns.org/">International Neural Network Society (INNS)</a>. </p>
 <p>* Excited and grateful to receive a research grant from Open Philanthropy to support our AI safety research.</p>
 <p>* <b>Two papers accepted at ICML 2025!</b> Congratulations to <b>Changsheng Wang</b> and <b>Chongyu Fan</b> on their first first-author ICML papers&ndash;well deserved!</p>
 <p>* Grateful to participate in <a href="https://cse.buffalo.edu/~jsyuan/ResponsibleAI_NSF.html">the U.S.–Southeast Asia Regional Workshop on Responsible Artificial Intelligence</a>. An invaluable experience engaging in important discussions on advancing responsible AI globally.</p>
@@ -198,7 +199,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-12 21:31:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-14 20:55:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
