--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,10 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>C. Fan, J. Jia, Y. Zhang, A. Ramakrishna, M. Hong, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2502.05374">Towards LLM Unlearning Resilient to Relearning Attacks: A Sharpness-Aware Minimization Perspective and Beyond</a>, <i>ICML&rsquo;25</i></p>
+</li>
+<li><p>C. Wang, Y. Zhang, J. Jia, P. Ram, D. Wei, Y. Yao, S. Pal, N. Baracaldo, <b>S. Liu</b>, Invariance Makes LLM Unlearning Resilient Even to Unanticipated Downstream Fine-Tuning, <i>ICML&rsquo;25</i></p>
+</li>
 <li><p>H. Li, Y. Zhang, S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, <a href="https://openreview.net/forum?id=vRvVVb0NAz">When is Task Vector Provably Effective for Model Editing? A Generalization Analysis of Nonlinear Transformers</a>, <i>ICLR’25</i>, <b>Oral</b> <tt>(1.8% acceptance rate)</tt></p>
 </li>
 <li><p>Y. Yao*, J. Liu*, Y. Gong*, X. Liu, Y. Wang, X. Lin, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2303.07474">Can Adversarial Examples Be Parsed to Reveal Victim Model Information?</a>, <i>WACV&rsquo;25</i></p>
