--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I intend to seek a new learning frontier when the current learning algorithms be
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
 <h2>Representative Publications</h2>
 <ul>
-<li><p><b>Trustworthy AI</b> : Robustness, Fairness, And Model Explanation </p>
+<li><p><b>Trustworthy AI</b> : Robustness, Fairness, and Model Explanation </p>
 </li>
 </ul>
 <ol>
@@ -87,7 +87,7 @@ ICML’22</p>
 </li>
 </ol>
 <ul>
-<li><p><b>Scalable AI</b> : Model Compression, Distributed Learning, Black-box Optimization, And Automated ML <br /></p>
+<li><p><b>Scalable AI</b> : Model Compression, Distributed Learning, Black-box Optimization, and Automated ML <br /></p>
 </li>
 </ul>
 <ol>
@@ -200,7 +200,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-30 13:54:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-05 23:47:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
