--- a/funding.html
+++ b/funding.html
@@ -115,7 +115,7 @@
 </li>
 </ol>
 <h1>Research Support</h1>
-<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, and <a href="https://research.cisco.com">Cisco Research</a>, <a href="https://www.nsf.gov">NSF</a>, <a href="https://www.dso.org.sg">DSO</a>, <a href="https://www.llnl.gov">LLNL</a>, <a href="https://www.arl.army.mil/who-we-are/aro/">ARO</a> and <a href="https://www.amazon.science/">Amazon Research</a>.</p>
+<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, <a href="https://research.cisco.com">Cisco Research</a>, <a href="https://www.nsf.gov">NSF</a>, <a href="https://www.dso.org.sg">DSO</a>, <a href="https://www.llnl.gov">LLNL</a>, <a href="https://www.arl.army.mil/who-we-are/aro/">ARO</a>, <a href="https://www.amazon.science/">Amazon Research</a> and <a href="https://www.openphilanthropy.org">Open Philanthropy</a>.</p>
 <table class="imgtable"><tr><td>
 <img src="images/support_update.png" alt="2121" width="792px" />&nbsp;</td>
 <td align="left"></td></tr></table>
