--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Congratulations to Yihua and Yuhao on their ICCV acceptance for their paper “Invisible Watermarks, Visible Gains: Steering Machine Unlearning with Bi-Level Watermarking Design”.</p>
 <p>* Excited and grateful to receive a gift award from the Center for AI Safety (CAIS).</p>
 <p>* Dr. Liu is selected as the recipient of the <b>2024 Aharon Katzir Young Investigator Award</b> from the <a href="https://www.inns.org/">International Neural Network Society (INNS)</a>. </p>
 <p>* Excited and grateful to receive a research grant from Open Philanthropy to support our AI safety research.</p>
@@ -200,7 +201,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-05 23:47:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-25 19:46:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
