--- a/index.html
+++ b/index.html
@@ -45,8 +45,27 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 </div></div>
 <h2>Short Bio</h2>
 <p>Sijia Liu is currently an Assistant Professor at the CSE department of Michigan State University, an Affiliated Professor at IBM Research, and an MIT-IBM Watson AI Lab affiliated PI. He received the Ph.D. degree (with All-University Doctoral Prize) in Electrical and Computer Engineering from Syracuse University, NY, USA, in 2016. He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, and a Research Staff Member at the MIT-IBM Watson AI Lab in 2018-2020. His research interests include scalable and trustworthy AI, e.g. scalable optimization for deep models, machine unlearning for vision and language models, AI robustness, and data-model efficiency.</p>
-<p>In 2024, he received the NSF Faculty Early Career Development (CAREER) Award. He also received the Best Student Paper Award at the 42nd IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2016) and the Best Paper Runner-Up Award at the 38th Conference on Uncertainty in Artificial Intelligence (UAI 2022). Dr. Liu has published over 70 papers at top-tier machine learning and computer vision conferences, including NeurIPS, ICML, ICLR, CVPR, ICCV, ECCV, AISTATS, and AAAI (please refer to the <a href="https://csrankings.org">CS ranking</a>).</p>
-<p>He is currently a Senior Member of IEEE, a Technical Committee (TC) Member of Machine Learning for Signal Processing (MLSP) in the IEEE’s Signal Processing Society, and an Associate Editor for IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems, respectively. He has also organized a series of Adversarial ML workshops in NeurIPS’24, ICML (’22, ’23), and KDD (’19-’22), and provided tutorials on Trustworthy and Scalable ML in AAAI (’23, ’24), NeurIPS’22, and CVPR (’20, ’23, ’24).</p>
+<p>His accomplishments have also been recognized through numerous competitive awards. He received the NSF CAREER Award in 2024 for his work on zeroth-order optimization and was named to the AAAI New Faculty Highlights in 2023 for his contributions to scalable optimization for robust AI, and. In 2025, he was honored with the Withrow Rising Scholar Award (the highest recognition for junior faculty in MSU’s College of Engineering), and received the Aharon Katzir Young Investigator Award from the International Neural Network Society (INNS) for foundational contributions to robust and efficient neural networks. He has also received industry faculty awards such as the Amazon Research Award (2024) and the Cisco Research Awards (2022–2024). According to 2025 <a href="https://csrankings.org/">CSRankings</a>, he holds the</p>
+<p>Dr. Liu is a Senior Member of IEEE and an active contributor to the research community. He serves on the IEEE Signal Processing Society’s Machine Learning for Signal Processing Technical Committee and as Associate Editor for both IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems. He has served as Area Chair for ICASSP and ML conferences, including NeurIPS, ICML, ICLR, and AISTATS. He founded the New Frontiers in Adversarial Machine Learning Workshop series (ICML/NeurIPS 2021–2024) and was a Co-Chair of the Conference on Parsimony and Learning (CPAL) in 2024. In addition, he has delivered numerous tutorials on trustworthy and scalable ML at leading conferences, including ICASSP, AAAI, CVPR, and NeurIPS.</p>
+<h2>Selected Rewards</h2>
+<ul>
+<li><p>Aharon Katzir Young Investigator Award, International Neural Network Society (INNS), 2025</p>
+</li>
+<li><p>Withrow Rising Scholar Award, Michigan State University, 2025</p>
+</li>
+<li><p>Amazon Research Award, 2024</p>
+</li>
+<li><p>National Science Foundation (NSF) CAREER Award, 2024</p>
+</li>
+<li><p>AAAI New Faculty Highlights, 2023</p>
+</li>
+<li><p>The Best Paper Runner-Up Award at 38th Conference on Uncertainty in Artificial Intelligence (UAI), 2022</p>
+</li>
+<li><p>IBM Pat Goldberg Best Paper Award Finalist, 2020</p>
+</li>
+<li><p>Best Student Paper Award at 42nd ICASSP, 2017</p>
+</li>
+</ul>
 <h2>Research Interests</h2>
 <p>My research spans the areas of machine learning (ML)/deep learning (DL), optimization, computer vision, security, signal processing and data science, 
 with a focus on developing learning algorithms and theory, and robust and explainable artificial intelligence (AI). 
@@ -201,7 +220,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-25 19:46:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-28 22:58:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
