--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Honored to receive a new Medium Grant Award from the National Science Foundation (NSF) as the lead PI, in collaboration with PIs Dongxiao Zhu (Wayne State) and Sanmi Koyejo (Stanford). Grateful for NSF’s support and excited to advance our research together!</p>
 <p>* Prof. Sijia Liu has been promoted to Associate Professor.</p>
 <p>* Congratulations to Soumyadeep and Changsheng on their COLM’25 acceptance of “LLM Unlearning Reveals a Stronger-Than-Expected Coreset Effect in Current Benchmarks.”</p>
 <p>* Congratulations to Yihua and Yuhao on their ICCV acceptance for their paper “Invisible Watermarks, Visible Gains: Steering Machine Unlearning with Bi-Level Watermarking Design”.</p>
@@ -224,7 +225,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-19 14:39:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-31 21:04:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
