--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* We are excited to announce that our tutorial “Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures” has been accepted for presentation at the IEEE Military Communications Conference (MILCOM 2025); see details at schedule <a href="[https://milcom2025.ieee-milcom.org/program/tutorials">link</a>].</p>
 <p>* Honored to receive a new Medium Grant Award from the National Science Foundation (NSF) as the lead PI, in collaboration with PIs Dongxiao Zhu (Wayne State) and Sanmi Koyejo (Stanford). Grateful for NSF’s support and excited to advance our research together!</p>
 <p>* Prof. Sijia Liu has been promoted to Associate Professor.</p>
 <p>* Congratulations to Soumyadeep and Changsheng on their COLM’25 acceptance of “LLM Unlearning Reveals a Stronger-Than-Expected Coreset Effect in Current Benchmarks.”</p>
@@ -225,7 +226,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-31 21:04:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-14 10:43:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
