--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
 <p>* We are excited to announce that our tutorial “Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures” has been accepted for presentation at the IEEE Military Communications Conference (MILCOM 2025); see details at schedule [<a href="https://milcom2025.ieee-milcom.org/program/tutorials">link</a>].</p>
 <p>* Honored to receive a new Medium Grant Award from the National Science Foundation (NSF) as the lead PI, in collaboration with PIs Dongxiao Zhu (Wayne State) and Sanmi Koyejo (Stanford). Grateful for NSF’s support and excited to advance our research together!</p>
 <p>* Prof. Sijia Liu has been promoted to Associate Professor.</p>
@@ -226,7 +227,7 @@ ICML’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-14 10:49:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-20 16:12:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
