--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Congrats to OPTML on three papers accepted at NeurIPS 2025! One spotlight and two posters, covering LLM unlearning, interpretability, and security on reasoning models!</p>
 <p>* Congrats to Changsheng, Yihua, and Jinghan on their paper acceptance at the 18th ACM Workshop on Artificial Intelligence and Security (AISec).</p>
 <p>* Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
 <p>* We are excited to announce that our tutorial “Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures” has been accepted for presentation at the IEEE Military Communications Conference (MILCOM 2025); see details at schedule [<a href="https://milcom2025.ieee-milcom.org/program/tutorials">link</a>].</p>
@@ -220,15 +221,10 @@ ICML’20</p>
 <p>* <i>Five</i> papers in <a href="https://nips.cc">NeurIPS 2021</a>.</p>
 <p>* Our MSU-NEU team (with PI <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a> and co-PI <a href="https://web.northeastern.edu/xuelin/?page_id=60">Xue Lin</a>) entered the Phase 2 of DARPA AIE RED.</p>
 <p>* <i>One</i> paper in <a href="https://icml.cc">ICML 2021</a>.</p>
-<p>* MIT news ‘<a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">Toward deep-learning models that can reason about code more like humans</a>’ on our ICLR’21 work ‘Adversarial Programs’ [<a href="https://openreview.net/pdf?id=PH5PH9ZO_4">paper</a>, <a href="https://github.com/ALFA-group/adversarial-code-generation">code</a>].</p>
-<p>* <i>Two</i> papers in <a href="http://cvpr2021.thecvf.com">CVPR 2021</a>.</p>
-<p>* <i>Two</i> papers in <a href="https://aistats.org/aistats2021/index.html">AISTATS 2021</a>.</p>
-<p>* <i>Four</i> papers in <a href="https://iclr.cc">ICLR 2021</a>.</p>
-<p>* <i>Three</i> papers in <a href="https://aaai.org/Conferences/AAAI-21/">AAAI 2021</a>.</p>
-<p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
+<p>* MIT news ‘<a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">Toward deep-learning models that can reason about code more like humans</a>’ on our ICLR’21 work ‘Adversarial Programs’ [[https:<i></i>openreview.net/pdf?id=P</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 15:29:21 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-18 15:44:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
