update research interests section with booklet link

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ More  broadly,  the  study  towards robust and scalable AI could make a signific
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. 
 I intend to seek a new learning frontier when the current learning algorithms become infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
+<p>📖 For a more detailed introduction, see our 
+<a href="/pdf/Recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a>.
+</p>
 <h2>Representative Publications</h2>
 <ul>
 <li><p><b>Trustworthy AI</b> : Robustness, Fairness, and Model Explanation </p>
@@ -134,6 +137,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* We released the Welcome2OPTML Booklet as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
 <p>* Congrats to OPTML on three papers accepted at NeurIPS 2025! One spotlight and two posters, covering LLM unlearning, interpretability, and security on reasoning models!</p>
 <p>* Congrats to Changsheng, Yihua, and Jinghan on their paper acceptance at the 18th ACM Workshop on Artificial Intelligence and Security (AISec).</p>
 <p>* Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
