--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
-<p>* We released the Welcome2OPTML Booklet as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
+<p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
 <p>* Congrats to OPTML on three papers accepted at NeurIPS 2025! One spotlight and two posters, covering LLM unlearning, interpretability, and security on reasoning models!</p>
 <p>* Congrats to Changsheng, Yihua, and Jinghan on their paper acceptance at the 18th ACM Workshop on Artificial Intelligence and Security (AISec).</p>
 <p>* Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
