--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ More  broadly,  the  study  towards robust and scalable AI could make a signific
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. 
 I intend to seek a new learning frontier when the current learning algorithms become infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
-<p>📖 For a more detailed introduction, see our 
-<a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a>.
+<p>📖 <b>For a more detailed introduction, see our 
+<a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a>.</b>
 </p>
 <h2>Representative Publications</h2>
 <ul>
